Fix spacing and add logic for detecting pro status

--- a/client/src/file.css
+++ b/client/src/file.css
@@ -9,19 +9,25 @@
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     padding: 15px;
+    width: 900px;
 }
 .artistWidget {
+    float: left;
+    width: 100%;
     height: 100%;
-    width: 20%;
+    padding: 0 20px;
     min-width: 120px;
     font: 14px "Interstate","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,Tahoma,sans-serif;
     color: #333;
     display: block;
-    margin: 0 1%
+    margin: 0 1%;
+    flex-basis: 12%;
 }
 
 .songDetailContainer .songDetailWidgetSmall {
-    width: 80%;
+    float:left;
+    width: 100%;
+    /* width: 80%; */
     height: 170px;
     font: 12px "Interstate","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,Tahoma,sans-serif;
     color: #333;
@@ -50,7 +56,7 @@
     background-color: initial;
 }
 .songDetailContainer .songDetailWidgetExpanded{
-    width: 80%;
+    width: 100%;
     height: auto;
     font: 12px "Interstate","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Verdana,Tahoma,sans-serif;
     color: #333;
